[package]
name = "web-yew-play"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-bindgen = "0.2.88"
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"

[lib]
crate-type = ["cdylib","rlib"]
